# capntls

./: Cargo.toml  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
examples/: no_tls.rs
pytest/: Pipfile  async_reconnecting_ssl_client.py  async_ssl_client.py  test_examples.py
schema/: echo.capnp
src/: client.rs  main.rs  server.rs
