[package]
name = "capntls"
version = "1.0.1"
authors = ["Ian P. Cooke <ipc@informatic.io>"]
build = "build.rs"

[build-dependencies]
capnpc = "^0.10"

[dependencies]
rcgen = "0.5.1"
futures = "^0.1"
tokio-core = "^0.1"
tokio-io = "^0.1"
webpki = "^0.21"
webpki-roots = "^0.17"
rustls = { version = "*", features = ["dangerous_configuration"] }
tokio-rustls = "*"
openssl = "*"
capnp = "^0.10"
capnp-rpc = "^0.10"
