[package]
name = "capntls"
version = "1.0.1"
authors = ["Ian P. Cooke <ipc@informatic.io>"]
build = "build.rs"
edition = "2018"

[build-dependencies]
capnpc = "^0.13"

[dependencies]
async-std = "^1.6"
rcgen = "^0.8"
futures = "^0.3"
tokio = { version = "^0.2", features = ["net", "rt-util", "tcp", "macros", "blocking"]}
tokio-util = { version = "^0.3", features = ["compat"] }
tokio-test = "*"
webpki = "^0.21"
webpki-roots = "^0.20"
rustls = { version = "^0.18", features = ["dangerous_configuration"] }
tokio-rustls = ">=0.14.1"
capnp = "^0.13"
capnp-rpc = "^0.13"
